starting to work on gait optimization

--- a/LittleDog.ipynb
+++ b/LittleDog.ipynb
@@ -74,7 +74,7 @@
     "\n",
     "def run_pid_control():\n",
     "    builder = DiagramBuilder()\n",
-    "    plant, scene_graph = AddMultibodyPlantSceneGraph(builder, 1e-4)\n",
+    "    plant, scene_graph = AddMultibodyPlantSceneGraph(builder, 1e-3)\n",
     "    parser = Parser(plant)\n",
     "    parser.AddModelFromFile('LittleDog.urdf')\n",
     "    parser.AddModelFromFile('ground.urdf')\n",
@@ -111,6 +111,87 @@
     "    simulator.AdvanceTo(2.0)\n",
     "\n",
     "run_pid_control()"
+   ]
+  },
+  {
+   "source": [
+    "# Gait optimization\n",
+    "\n",
+    "![](https://upload.wikimedia.org/wikipedia/commons/c/cf/Gait_graphs.jpg)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pydrake.all import MultibodyPlant\n",
+    "\n",
+    "def gait_optimization(gait = 'walking_trot'):\n",
+    "    plant = MultibodyPlant(1e-3)\n",
+    "    parser = Parser(plant)\n",
+    "    parser.AddModelFromFile('LittleDog.urdf')\n",
+    "    plant.Finalize()\n",
+    "    mu = 1 # rubber on rubber\n",
+    "    \n",
+    "    nq = 12\n",
+    "    foot_id = [\n",
+    "        plant.GetFrameByName('front_left_foot_center'),\n",
+    "        plant.GetFrameByName('front_right_foot_center'),\n",
+    "        plant.GetFrameByName('back_left_foot_center'),\n",
+    "        plant.GetFrameByName('back_right_foot_center')]\n",
+    "    # array to hold the time indices when each foot in on the ground         \n",
+    "    in_stance = [None]*4\n",
+    "\n",
+    "    # setup gait\n",
+    "    is_laterally_symmetric = False\n",
+    "    check_self_collision = False\n",
+    "    if gait == 'running_trot':\n",
+    "        N = 21\n",
+    "        in_stance[1] = np.arange(3, 17)\n",
+    "        in_stance[2] = np.arange(3, 17)\n",
+    "        speed = 0.9\n",
+    "        stride_length = .55\n",
+    "        is_laterally_symmetric = True\n",
+    "    elif gait == 'walking_trot':\n",
+    "        N = 21\n",
+    "        in_stance[0] = np.arange(0, 11)\n",
+    "        in_stance[1] = np.arange(8, N)\n",
+    "        in_stance[2] = np.arange(8, N)\n",
+    "        in_stance[3] = np.arange(0, 11)\n",
+    "        speed = 0.4\n",
+    "        stride_length = .25\n",
+    "        is_laterally_symmetric = True\n",
+    "    elif gait == 'rotary_gallop':\n",
+    "        N = 41\n",
+    "        in_stance[0] = np.arange(7, 19)\n",
+    "        in_stance[1] = np.arange(3, 15)\n",
+    "        in_stance[2] = np.arange(24, 35)\n",
+    "        in_stance[3] = np.arange(26, 38)\n",
+    "        speed = 1\n",
+    "        stride_length = .65\n",
+    "        check_self_collision = True\n",
+    "    elif gait == 'bound':\n",
+    "        N = 41\n",
+    "        in_stance[0] = np.arange(6, 18)\n",
+    "        in_stance[1] = np.arange(6, 18)\n",
+    "        in_stance[2] = np.arange(21, 32)\n",
+    "        in_stance[3] = np.arange(21, 32)\n",
+    "        speed = 1.2\n",
+    "        stride_length = .55\n",
+    "        check_self_collision = True\n",
+    "    else:\n",
+    "        raise RuntimeError('Unknown gait.')\n",
+    "\n",
+    "    \n",
+    "    T = stride_length / speed\n",
+    "        \n",
+    "    # TODO(russt): Finish porting gaitOptimization.m.  \n",
+    "\n",
+    "gait_optimization()"
    ]
   },
   {
